# Synchronized-Coupled-Animation-Assignment

./: CMakeLists.txt  main.cpp
